--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "OpenShift-Sample-App",
+  "name": "Air-QualityIndex",
   "version": "1.0.0",
   "description": "OpenShift Sample Application",
   "homepage": "https://www.openshift.com/",
@@ -12,7 +12,7 @@
 
   "repository": {
     "type": "git",
-    "url": "https://gitub.com/openshift-quickstart/openshift-mongo-node-express-example"
+    "url": "https://gitub.com/Bhaskargithub/openshift-mongo-node-express-example"
   },
 
   "engines": {
